# hack-2025-backend

./: .dockerignore  .gitignore  CREDITS.md  Dockerfile  README.md  cron_jobs.py  email_service.py  main.py  pyproject.toml
src/: custom_types.py  email_contents.py  emails.py  leagues.py  main.py  questions.py  questions_library.json  shared_data.py  store.py  streak.py  users.py
