[project]
name = "hack-2025-backend"
version = "0.1.0"
description = "he backend service for Gū Dé, the guilt-tripping quiz app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "clear>=2.0.0",
    "fastapi[standard]>=0.116.1",
    "resend>=2.11.0",
]

[tool.uv]
