[project]
name = "hack-2025-backend"
version = "0.1.0"
description = "he backend service for Gū Dé, the guilt-tripping quiz app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clear>=2.0.0",
    "fastapi[standard]>=0.116.1",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
    "resend>=2.11.0",
    "schedule>=1.2.0",
]

[tool.uv]
